# 3D-Semantic-Segmentation-for-Scene-Parsing

./: README.md
loadplypipeline/: CMakeLists.txt  loadplypipeline.cpp
neural network/: addColor.py  model.py  predict.py  sample_shuffle.py  train.py
neural network/output/: result.txt
